# tucker

./: .gitignore  LICENSE.md  README.md  experiments.py  prepare_data.py  pyproject.toml
data/: data.npy  katl_lamp.csv.bz2  kclt_lamp.csv.bz2  kden_lamp.csv.bz2  kdfw_lamp.csv.bz2  kjfk_lamp.csv.bz2  kmem_lamp.csv.bz2  kmia_lamp.csv.bz2  kord_lamp.csv.bz2  kphx_lamp.csv.bz2  ksea_lamp.csv.bz2
tests/: test_tucker.py
tucker/: hosvd.py  tucker_als.py
