[tool.poetry]
name = "tucker"
version = "0.1.0"
description = ""
authors = ["Zachary Blanks <zdb6dz@virginia.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
pandas = "^1.4.1"
tensorly = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
